@@ -199,4 +199,5 @@ intersphinx_mapping = {
     "python": ('https://docs.python.org/', None),
     "numpy": ('http://docs.scipy.org/doc/numpy', None),
     "scipy": ('https://docs.scipy.org/doc/scipy/reference/', None),
+    "nanite": ('https://nanite.readthedocs.io/en/stable', None),
     }
